# GitPackageTutorial

./: pyproject.toml  requirements.txt  tutorial.ipynb
GitTutorial/: __init__.py  simple_method.py
GitTutorial/config/: config.py
src/GitTutorial/: __init__.py
src/GitTutorial/config/: config.yaml
src/GitTutorial/numpy_fns/: __init__.py  simple_method.py
src/GitTutorial/pytorch_fns/: simple_method.py
