[project]
name = "GitTutorial"
version = "1.0.0"
description = "Tutorial for how to use github as pip packages"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=62.6.0"]
build-backend = "setuptools.build_meta:__legacy__"