[project]
name = "GitTutorial"
version = "1.0.0"
description = "Tutorial for how to use github as pip packages"
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.3.1+cu118",
    "torchaudio>=2.3.1+cu118",
    "torchvision>=0.18.1+cu118",
    "PyYAML==6.0.1",
]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]